tests/baselines/reference/self-types-keyof.errors.txt
tests/cases/compiler/self-types-keyof.ts(11,5): error TS18051: Type '"b"' can't be used to index type '{ a: number; }'
tests/cases/compiler/self-types-keyof.ts(17,5): error TS2322: Type '{ a: number; } extends { [_ in KeyOf<{ a: number; }>]: infer X; } ? X : never' is not assignable to type 'number'.
  Type 'unknown' is not assignable to type 'number'.
tests/cases/compiler/self-types-keyof.ts(17,33): error TS2345: Argument of type 'string' is not assignable to parameter of type 'KeyOf<{ a: number; }>'.


==== tests/cases/compiler/self-types-keyof.ts (3 errors) ====
    // Implementing index types without index types
    
    type KeyOf<T> =
      self extends string | number | symbol
        ? T extends { [_ in self]: unknown }
            ? self
            : Never<`Type '${Print<self>}' can't be used to index type '${Print<T>}'`>
        : string | number | symbol
    
    let t0: KeyOf<{ a: number }> = "a"
    let t1: KeyOf<{ a: number }> = "b"
        ~~
!!! error TS18051: Type '"b"' can't be used to index type '{ a: number; }'
    
    declare const get:
      <T, K extends KeyOf<T>>(t: T, k: K) =>
        T extends { [_ in K]: infer X } ? X : never
    
    let t3: number = get({ a: 10 }, "a" as "a")
        ~~
!!! error TS2322: Type '{ a: number; } extends { [_ in KeyOf<{ a: number; }>]: infer X; } ? X : never' is not assignable to type 'number'.
!!! error TS2322:   Type 'unknown' is not assignable to type 'number'.
                                    ~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'KeyOf<{ a: number; }>'.
    // TODO?: this should compile
    
    export {}
    